--- a/ParserSite/Views/Orders/Index.cshtml
+++ b/ParserSite/Views/Orders/Index.cshtml
@@ -9,8 +9,8 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-<div id="list-orders">
-    <div id="loading">
+<div id="list-orders" class="row">
+    <div id="loading" class="col-*-4">
         Загрузка данных с сервера...
     </div>
 </div>
