--- a/ParserSite/Views/Orders/Details.cshtml
+++ b/ParserSite/Views/Orders/Details.cshtml
@@ -7,88 +7,75 @@
 
 <h2>Details</h2>
 
-<table class="table-responsive">
-    <tr>
-        <td>
-            <h4>Order</h4>
-            <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.OrderNumber)
-                </dt>
+<div class="row">
+<div class="col-md-6">
+    <h4>Order</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.OrderNumber)
+        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.OrderNumber)
-                </dd>
+        <dd>
+            @Html.DisplayFor(model => model.OrderNumber)
+        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.ClientName)
-                </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ClientName)
+        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.ClientName)
-                </dd>
+        <dd>
+            @Html.DisplayFor(model => model.ClientName)
+        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.ClientCar)
-                </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ClientCar)
+        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.ClientCar)
-                </dd>
+        <dd>
+            @Html.DisplayFor(model => model.ClientCar)
+        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.OrderDate)
-                </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.OrderDate)
+        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.OrderDate)
-                </dd>
+        <dd>
+            @Html.DisplayFor(model => model.OrderDate)
+        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.DTPDate)
-                </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.DTPDate)
+        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.DTPDate)
-                </dd>
+        <dd>
+            @Html.DisplayFor(model => model.DTPDate)
+        </dd>
+    </dl>
+</div>
 
-            </dl>
-        </td>
-        <td>
-            <h4>Order Parts:</h4>
-            <table>
-                @foreach (var p in Model.Parts)
-                {
-                    <tr>
-                        <td>
-                            @p.PartNumber
-                        </td>
-                        <td>
-                            @p.PartName
-                        </td>
-                    </tr>                                       
-                }
-            </table>
-        </td>
-    </tr>
-</table>
+<div class="col-md-6">
+    <h4>Parts list:</h4>
+    <hr />
+    @Html.Action("Index", "Parts", new { id = Model.Id })
+</div>
+</div>
 
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
-@if(Model.ParsedDatas.Count>0)
+@if (Model.ParsedDatas.Count > 0)
 {
     Html.RenderPartial("_ParsedDataPartial", Model.ParsedDatas);
 }
 
-@if (Model.Report !=null)
+@if (Model.Report != null)
 {
     <br />
 
 
     <p>Report @Model.Report.DateCalc</p>
-    @Html.Partial("_parsedDataPartial",Model.Report.ParsedDatas)
+    @Html.Partial("_parsedDataPartial", Model.Report.ParsedDatas)
     <br />
 }
