--- a/ParserSite/Views/Shared/_Layout.cshtml
+++ b/ParserSite/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/knockout")
     @RenderSection("scripts", required: false)
 </body>
 </html>
