--- a/ParserSite/Views/Shared/_ParsedDataPartial.cshtml
+++ b/ParserSite/Views/Shared/_ParsedDataPartial.cshtml
@@ -39,6 +39,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Url)
         </th>
+        <th>Возможные действия</th>
     </tr>
 
 @foreach (var item in Model) {
@@ -49,15 +50,15 @@
         <td>
             @Html.DisplayFor(modelItem => item.ParseDate)
         </td>
-@foreach (var p in ParserTypes)
-{
+    @foreach (var p in ParserTypes)
+    {
         <td>
-            @if (item.ParserType.Trim() == p)
+            @if (item.ParserType.Trim() == p.Trim())
             {
                 @Html.DisplayFor(modelItem=>item.Price)
             }
         </td>
-}
+    }
         <td>
             @Html.DisplayFor(modelItem => item.Original)
         </td>
@@ -76,6 +77,9 @@
 
         <td>
             @Html.DisplayFor(modelItem => item.Url)
+        </td>
+        <td>
+            @Html.ActionLink("Delete", "Delete", "ParsedDatas", new { id = item.Id }, new { @class="btn btn-small"})
         </td>
     </tr>
 }
