--- a/ParserSite/Views/Shared/_PartsPartial.cshtml
+++ b/ParserSite/Views/Shared/_PartsPartial.cshtml
@@ -1,17 +1,17 @@
-﻿@model IEnumerable<Part>
+﻿@model Order
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.PartNumber)
+            @Html.DisplayName("Каталожный номер")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PartName)
+            @Html.DisplayName("Наименование")
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model.Parts) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.PartNumber)
@@ -28,5 +28,4 @@
         </td>
     </tr>
 }
-
 </table>
