--- a/ParserSite/Views/Orders/Index.cshtml
+++ b/ParserSite/Views/Orders/Index.cshtml
@@ -16,10 +16,35 @@
 </div>
 
 @section Scripts {
+
+@Scripts.Render("~/bundles/jqueryval")
+<script src='@Url.Content("~/Scripts/jquery-ui-1.11.4.min.js")' type="text/javascript"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         $.ajaxSetup({ cache: false });
         $("#list-orders").load("/Orders/Index");
     });
+</script>
+<script>
+    
+    var dialogrun = function () {
+        $.ajaxSetup({ cache: false });
+        $(".viewDialog").on("click", function (e) {
+            e.preventDefault();
+            $("<div></div>")
+                .addClass("dialog")
+                .appendTo("body")
+                .dialog({
+                    title: $(this).attr("data-dialog-title"),
+                    close: function () { $(this).remove() },
+                    modal: true
+                })
+                .load(this.href);
+        });
+        $(".close").on("click", function (e) {
+            e.preventDefault();
+            $(this).closest(".dialog").dialog("close");
+        });
+    };
 </script>
 }
