--- a/ParserSite/Views/Shared/_Layout.cshtml
+++ b/ParserSite/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href='@Url.Content("~/Content/themes/base/all.css")' rel="stylesheet" type="text/css" />
+    <link href='@Url.Content("~/Content/bootstrap_skin.css")' rel="stylesheet" type="text/css" />
 
 </head>
 <body>
