--- a/ParserSite/Views/Parts/Create.cshtml
+++ b/ParserSite/Views/Parts/Create.cshtml
@@ -25,6 +25,7 @@
             </td>
             <td>
                 <input type="submit" value="Add" class="btn btn-default" />
+                <a href="#" class="btn btn-default" onclick="Parts_Delete_Click();return false;">Delete</a>
             </td>
         </tr>
     </table>
