--- a/ParserSite/Views/Parts/Create.cshtml
+++ b/ParserSite/Views/Parts/Create.cshtml
@@ -25,4 +25,7 @@
                 <a href="#" class="btn btn-default" onclick="Parts_Delete_Click(); return false;">Delete</a>
                 <a href="#" class="btn btn-default" onclick="Parts_Parse_Click('@Url.Action("Parse", "ParsedDatas",
                 new { OrderId = ViewBag.OrderId })'); return false;">Parse!</a>
+                <a href="#" class="btn btn-default" onclick="Parts_Parse_Click('@Url.Action("Test", "Reports",
+                    new { OrderId = ViewBag.OrderId })'); return false;">Report</a>
+
 }
